{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 110,
  "lineage": "48362e34-d39b-91d0-727a-8b3647225e09",
  "resources": [
    {
      "module": "module.failover",
      "mode": "data",
      "type": "aws_vpc_peering_connection",
      "name": "accepter",
      "provider": "module.failover.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accepter": {
              "allow_remote_vpc_dns_resolution": false
            },
            "cidr_block": "192.168.0.0/16",
            "cidr_block_set": [
              {
                "cidr_block": "192.168.0.0/16"
              }
            ],
            "id": "pcx-0d9877e71b046407e",
            "owner_id": "479111403931",
            "peer_cidr_block": "10.2.0.0/16",
            "peer_cidr_block_set": [
              {
                "cidr_block": "10.2.0.0/16"
              }
            ],
            "peer_owner_id": "106039313224",
            "peer_region": "us-east-2",
            "peer_vpc_id": "vpc-0dd62df2c3058f7d0",
            "region": "us-east-2",
            "status": "active",
            "vpc_id": "vpc-0e1d1999a8c9f3c94"
          }
        }
      ]
    },
    {
      "module": "module.failover",
      "mode": "managed",
      "type": "aws_route",
      "name": "route",
      "provider": "module.failover.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "rtb-0148881fd1a7b0bb7",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "192.168.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0148881fd1a7b0bb73901788224",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0148881fd1a7b0bb7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0d9877e71b046407e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "confluent_environment.AWS_terraform",
            "module.failover.confluent_network.aws-disaster-vpc-peering",
            "module.failover.confluent_peering.aws-disaster-recovery",
            "module.failover.data.aws_route_tables.rts",
            "module.failover.data.aws_vpc_peering_connection.accepter"
          ]
        },
        {
          "index_key": "rtb-090b34a80e8bab956",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "192.168.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-090b34a80e8bab9563901788224",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-090b34a80e8bab956",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0d9877e71b046407e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "confluent_environment.AWS_terraform",
            "module.failover.confluent_network.aws-disaster-vpc-peering",
            "module.failover.confluent_peering.aws-disaster-recovery",
            "module.failover.data.aws_route_tables.rts",
            "module.failover.data.aws_vpc_peering_connection.accepter"
          ]
        }
      ]
    },
    {
      "module": "module.failover",
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "peer",
      "provider": "module.failover.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0d9877e71b046407e",
            "peer_owner_id": "479111403931",
            "peer_region": "us-east-2",
            "peer_vpc_id": "vpc-0e1d1999a8c9f3c94",
            "vpc_id": "vpc-0dd62df2c3058f7d0",
            "vpc_peering_connection_id": "pcx-0d9877e71b046407e"
          },
          "dependencies": [
            "confluent_environment.AWS_terraform",
            "module.failover.confluent_network.aws-disaster-vpc-peering",
            "module.failover.confluent_peering.aws-disaster-recovery",
            "module.failover.data.aws_vpc_peering_connection.accepter"
          ]
        }
      ]
    },
    {
      "module": "module.primary",
      "mode": "data",
      "type": "aws_vpc_peering_connection",
      "name": "source-accepter",
      "provider": "module.primary.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accepter": {
              "allow_remote_vpc_dns_resolution": false
            },
            "cidr_block": "192.168.0.0/16",
            "cidr_block_set": [
              {
                "cidr_block": "192.168.0.0/16"
              }
            ],
            "id": "pcx-07f45ebac753d892a",
            "owner_id": "479111403931",
            "peer_cidr_block": "10.0.0.0/16",
            "peer_cidr_block_set": [
              {
                "cidr_block": "10.0.0.0/16"
              }
            ],
            "peer_owner_id": "106039313224",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-06fb07384264ca2ec",
            "region": "us-east-1",
            "status": "active",
            "vpc_id": "vpc-080ebe70e2f2a8b38"
          }
        }
      ]
    },
    {
      "module": "module.primary",
      "mode": "managed",
      "type": "aws_route",
      "name": "source-route",
      "provider": "module.primary.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "rtb-00fe62d524497eacc",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "192.168.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00fe62d524497eacc3901788224",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00fe62d524497eacc",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-07f45ebac753d892a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "confluent_environment.AWS_terraform",
            "module.primary.confluent_network.aws-source-peering",
            "module.primary.confluent_peering.aws-source",
            "module.primary.data.aws_route_tables.source-rts",
            "module.primary.data.aws_vpc_peering_connection.source-accepter"
          ]
        },
        {
          "index_key": "rtb-093ec0aaaa5b71c58",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "192.168.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-093ec0aaaa5b71c583901788224",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-093ec0aaaa5b71c58",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-07f45ebac753d892a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "confluent_environment.AWS_terraform",
            "module.primary.confluent_network.aws-source-peering",
            "module.primary.confluent_peering.aws-source",
            "module.primary.data.aws_route_tables.source-rts",
            "module.primary.data.aws_vpc_peering_connection.source-accepter"
          ]
        }
      ]
    },
    {
      "module": "module.primary",
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "peering",
      "provider": "module.primary.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": false,
            "id": "pcx-07f45ebac753d892a",
            "peer_owner_id": "479111403931",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-080ebe70e2f2a8b38",
            "vpc_id": "vpc-06fb07384264ca2ec",
            "vpc_peering_connection_id": "pcx-07f45ebac753d892a"
          },
          "dependencies": [
            "confluent_environment.AWS_terraform",
            "module.primary.confluent_network.aws-source-peering",
            "module.primary.confluent_peering.aws-source",
            "module.primary.data.aws_vpc_peering_connection.source-accepter"
          ]
        }
      ]
    }
  ]
}